--- a/src/index.css
+++ b/src/index.css
@@ -14,6 +14,28 @@
   --card-shadow: 0px 20px 100px -10px rgba(66, 71, 91, 0.1);
 }
 
+body {
+  background: none;
+  background-color: #ffffff; 
+  position: relative;
+}
+
+body::before {
+  content: "";
+  background-image: url('https://w.wallhaven.cc/full/2y/wallhaven-2y16qg.png');
+  filter: blur(2px);
+  -webkit-filter: blur(5px); 
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  background-repeat: no-repeat;
+  background-size: cover; 
+}
+
+
 * {
   scroll-behavior: smooth;
 }
